--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,59 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>your.group.id</groupId>
-    <artifactId>bank-application</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <packaging>war</packaging>
-
-    <properties>
-        <java.version>17</java.version>
-    </properties>
-
+    
+    <!-- Define project coordinates -->
+    <groupId>com.example</groupId>
+    <artifactId>bankxpert</artifactId>
+    <version>1.0.0</version>
+    
+    <!-- Project metadata -->
+    <name>BankXpert</name>
+    <description>A simple banking application</description>
+    
+    <!-- Define project dependencies -->
     <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.3</version>
-            <scope>provided</scope>
-        </dependency>
+        <!-- Add any dependencies here -->
+        <!-- For now, we don't have any external dependencies -->
     </dependencies>
-
+    
+    <!-- Define build configuration -->
     <build>
-        <sourceDirectory>/main/BankXpert.java</sourceDirectory>
+        <sourceDirectory>src</sourceDirectory>
         <plugins>
+            <!-- Maven compiler plugin -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version>
             </plugin>
         </plugins>
     </build>
+    
+    <!-- Jenkins configuration -->
+    <profiles>
+        <profile>
+            <id>jenkins</id>
+            <build>
+                <plugins>
+                    <!-- Maven Surefire Plugin for running tests -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M5</version>
+                        <configuration>
+                            <skipTests>true</skipTests> <!-- Skip running tests during Jenkins build -->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
